Review comment fixes Refactor entity initialization process to improve clarity and enforce bundle initialization state